tests/datatypes/errors/ref_misspelled_var.js
/*
Expected Error:
ReferenceError
*/
let username = "Alice";
console.log(usernme);
